{
  "version": 4,
  "terraform_version": "0.14.8",
  "serial": 292,
  "lineage": "2f1d1eef-e4b2-2602-7181-7c20f9a7a835",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-062e9cf45384a4e74",
            "domain": "vpc",
            "id": "eipalloc-046a1fc317b010ef5",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0c5fdb43f7cf3c333",
            "private_dns": "ip-31-10-1-130.ec2.internal",
            "private_ip": "31.10.1.130",
            "public_dns": "ec2-23-22-176-158.compute-1.amazonaws.com",
            "public_ip": "23.22.176.158",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.us_east_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:024632532877:internet-gateway/igw-0832fdbaf8f27f061",
            "id": "igw-0832fdbaf8f27f061",
            "owner_id": "024632532877",
            "tags": {
              "Name": "east-gateway"
            },
            "vpc_id": "vpc-0f9715f78b90a5614"
          },
          "dependencies": [
            "aws_vpc.us_east_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-046a1fc317b010ef5",
            "id": "nat-0f6f65588f17d8bd8",
            "network_interface_id": "eni-0c5fdb43f7cf3c333",
            "private_ip": "31.10.1.130",
            "public_ip": "23.22.176.158",
            "subnet_id": "subnet-0f94d4a1ed2e7dc3b"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.gw",
            "aws_subnet.public_subnet1",
            "aws_vpc.us_east_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a16ae00cb24ee53f",
            "owner_id": "024632532877",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-east-rt"
            },
            "vpc_id": "vpc-0f9715f78b90a5614"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.us_east_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-043378de7a2b273e2",
            "owner_id": "024632532877",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "public-east-rt"
            },
            "vpc_id": "vpc-0f9715f78b90a5614"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.us_east_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2c0892fe83efe2f",
            "route_table_id": "rtb-0a16ae00cb24ee53f",
            "subnet_id": "subnet-0558edcfe8f67b8a8"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_subnet1",
            "aws_vpc.us_east_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083d06f4558da7f9c",
            "route_table_id": "rtb-0a16ae00cb24ee53f",
            "subnet_id": "subnet-0d2235ea565f8354c"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_subnet1",
            "aws_vpc.us_east_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-012ce8ca72be92570",
            "route_table_id": "rtb-043378de7a2b273e2",
            "subnet_id": "subnet-0f94d4a1ed2e7dc3b"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_subnet1",
            "aws_vpc.us_east_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0718aa39ff8d262a3",
            "route_table_id": "rtb-043378de7a2b273e2",
            "subnet_id": "subnet-0fce7951febb0fed6"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_subnet2",
            "aws_vpc.us_east_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:024632532877:subnet/subnet-0558edcfe8f67b8a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "31.10.2.0/24",
            "id": "subnet-0558edcfe8f67b8a8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "024632532877",
            "tags": {
              "Name": "east_private_subnet1"
            },
            "vpc_id": "vpc-0f9715f78b90a5614"
          },
          "dependencies": [
            "aws_vpc.us_east_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:024632532877:subnet/subnet-0d2235ea565f8354c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "31.10.3.0/24",
            "id": "subnet-0d2235ea565f8354c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "024632532877",
            "tags": {
              "Name": "east_private_subnet1"
            },
            "vpc_id": "vpc-0f9715f78b90a5614"
          },
          "dependencies": [
            "aws_vpc.us_east_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:024632532877:subnet/subnet-0f94d4a1ed2e7dc3b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "31.10.1.0/24",
            "id": "subnet-0f94d4a1ed2e7dc3b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "024632532877",
            "tags": {
              "Name": "east_public_subnet1"
            },
            "vpc_id": "vpc-0f9715f78b90a5614"
          },
          "dependencies": [
            "aws_vpc.us_east_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:024632532877:subnet/subnet-0fce7951febb0fed6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "31.10.4.0/24",
            "id": "subnet-0fce7951febb0fed6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "024632532877",
            "tags": {
              "Name": "east_public_subnet1"
            },
            "vpc_id": "vpc-0f9715f78b90a5614"
          },
          "dependencies": [
            "aws_vpc.us_east_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "us_east_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:024632532877:vpc/vpc-0f9715f78b90a5614",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "31.10.0.0/16",
            "default_network_acl_id": "acl-0ffbf047dd099b55a",
            "default_route_table_id": "rtb-0435e968a4b8c4538",
            "default_security_group_id": "sg-0b81c061cd4fb89e2",
            "dhcp_options_id": "dopt-6558131f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f9715f78b90a5614",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0435e968a4b8c4538",
            "owner_id": "024632532877",
            "tags": {
              "Location": "east_us",
              "Name": "us_east"
            }
          }
        }
      ]
    }
  ]
}